deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld-svc
spec:
  selector:
    app: helloworld
  ports:
  - port: 8080
    targetPort: 3000
  type: ClusterIP
